--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "uuid": "^9.0.1"
