--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.3",
-    "uuid": "^9.0.1"
+    "mongoose": "^7.5.3"
   }
 }
