--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun --hot run src/index.ts"
+    "dev": "bun --hot run src/index.ts",
+    "start": "bun run src/index.ts --smol"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
